--- a/public/css/join.css
+++ b/public/css/join.css
@@ -1,8 +1,7 @@
 body {
-  background: #2193b0;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  font-family: Arial, sans-serif;
+  background: rgb(131,58,180);
+background: linear-gradient(3deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+  font-family: Helvetica, sans-serif, sans-serif;
   margin: 0;
 }
 
@@ -16,45 +15,45 @@ body {
 }
 
 .c-login__box {
-  background: rgba(255, 255, 255, .4);
-  -webkit-box-shadow: 6px 6px 30px 1px rgba(0,0,0,0.35);
-  -moz-box-shadow: 6px 6px 30px 1px rgba(0,0,0,0.35);
-  box-shadow: 6px 6px 30px 1px rgba(0,0,0,0.35);
-  border-radius: 10px;
   height: auto;
   padding: 30px 20px;
-  width: 280px;
+  width: 300px;
 }
 
 .c-login__box h2 {
   color: #ffffff;
-  font-size: 22px;
+  font-size: 36px;
   text-align: left;
-  line-height: 24px;
   margin: 0 0 20px;
+  margin-bottom: 50px;
+}
+
+h2:after {
+  content: '';
+  background-color: #fff;
+  width: 40px;
+  height: 7px;
+  display: block;
+  margin-top: 20px;
+  border-radius: 100px;
 }
 
 .c-login__box button {
-  -webkit-box-shadow: 3px 3px 20px 1px rgba(0,0,0,0.35);
-  -moz-box-shadow: 3px 3px 20px 1px rgba(0,0,0,0.35);
   background: white;
-  border-radius: 4px;
-  border: 0;
-  box-shadow: 3px 3px 20px 1px rgba(0,0,0,0.35);
+  border-radius: 100px;
+  border: solid 1px #fff;
   cursor: pointer;
   display: block;
   font-size: 18px;
   font-weight: bold;
-  margin: 0 auto 0 auto;
   padding: 12px 40px;
-  transition: box-shadow 0.2s ease;
-  -webkit-transition: box-shadow 0.2s ease;
+  width: 100%;
+  margin-top: 30px;
 }
 
 .c-login__box button:hover {
-  -webkit-box-shadow: 3px 3px 10px 1px rgba(0,0,0,0.35);
-  -moz-box-shadow: 3px 3px 10px 1px rgba(0,0,0,0.35);
-  box-shadow: 3px 3px 10px 1px rgba(0,0,0,0.35); 
+  transition: 0.2s ease;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, .3);
 }
 
 .c-login__input-holder {
@@ -64,24 +63,29 @@ body {
 }
 
 .c-login__input-holder label {
-  color: #000000;
-  font-size: 14px;
-  font-style: italic;
-  font-weight: lighter;
-  line-height: 24px;
-  position: absolute;
-  top: 0;
-  left: 10px;
+  color: #fff;
+  font-size: 16px;
 }
 
 .c-login__input-holder input {
-  background: #ffffff;
-  border-radius: 5px;
-  border: 0;
   box-sizing: border-box;
   display: block;
   font-size: 16px;
-  height: 56px;
-  padding: 24px 10px 6px;
+  height: 50px;
   width: 100%;
+  background-color: transparent;
+  border: solid 2px #fff;
+  border-radius: 5px;
+  padding-left: 10px;
+  margin-top: 5px;
+  color: #fff;
+}
+
+.c-login__input-holder input:focus {
+  outline: none;
+  border: solid 2px #000;
+}
+
+button:focus {
+  outline: none;
 }
